# retrain-pipelines

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.MD  mypy.ini  pyproject.toml  setup.py
.github/workflows/: clone-tracking.yml
extra/frameworks/: README.MD
pkg_src/: pyproject.toml  setup.py
pkg_src/.mypy_stubs/: README.md  kaggle_secrets.pyi
pkg_src/.mypy_stubs/google/colab/: __init__.pyi  userdata.pyi
pkg_src/.mypy_stubs/pyngrok/: __init__.pyi  exception.pyi  ngrok.pyi
pkg_src/retrain_pipelines/: __init__.py  __version__.py  config.py  launcher.py  launcher_magic.py  legacy_launcher.py  legacy_launcher.sh  legacy_launcher_magic.py  local_launcher.py  local_launcher.sh  local_launcher_magic.py
pkg_src/retrain_pipelines/dag_engine/: __init__.py  config.py  context_store.py  core.py  grpc_client.py  hybrid_pool_executor.py  nb_console_print.py  renderer.py  rp_logging.py  runtime.py  task.py
pkg_src/retrain_pipelines/dag_engine/core/: __init__.py  core.py  trace_buffer.py
pkg_src/retrain_pipelines/dag_engine/db/: dao.py  model.py
pkg_src/retrain_pipelines/dag_engine/db/alembic/: alembic.ini  env.py
pkg_src/retrain_pipelines/dag_engine/db/alembic/versions/: 202601051236-bdff337fbb86_initial_migration.py  202607131612-450e163fd43d_context_store.py
pkg_src/retrain_pipelines/dag_engine/db/grpc/: README.txt  task_trace.proto  task_trace_pb2.py  task_trace_pb2_grpc.py
pkg_src/retrain_pipelines/dag_engine/sdk/: __init__.py  core.py
pkg_src/retrain_pipelines/dag_engine/stores/: commons.py  context_store.py  params_store.py
pkg_src/retrain_pipelines/dag_engine/web_console/: __init__.py  grpc_server.py  main.py  main_cli_utility.py  main_notebook.py
pkg_src/retrain_pipelines/dag_engine/web_console/api/: __init__.py  executions.py  open_api.py  tasks.py
pkg_src/retrain_pipelines/dag_engine/web_console/static/: ansi_up.js  collapsible_grouped_table.js  datetime-picker.js  gantt-events.js  gantt-timeline-renderer.js  gantt-timeline.js  html_body.css  http_1_1_max_sse_conn.js  svg_dag.css  task_details_modal.css  task_details_modal.html  task_details_modal.js  wavy_list_items.js
pkg_src/retrain_pipelines/dag_engine/web_console/utils/: __init__.py  cookies.py  executions.py  server_logs.py  test_websocket.py
pkg_src/retrain_pipelines/dag_engine/web_console/utils/execution/: events.py  gantt_chart.py  svg_template.html
pkg_src/retrain_pipelines/dag_engine/web_console/utils/executions/: __init__.py  events.py  executions.py
pkg_src/retrain_pipelines/dag_engine/web_console/views/: api.py  error_pages.py  execution.py  home.py  page_template.py  server.py  ui.py
pkg_src/retrain_pipelines/dataset/: __init__.py  dataset.py  hf_utils.py  tool_calls.py
pkg_src/retrain_pipelines/dataset/features_dependencies/: __init__.py  features_dependencies.py
pkg_src/retrain_pipelines/dataset/hf_utils/: __init__.py  hacky_size_categories.py  hf_utils.py
pkg_src/retrain_pipelines/frameworks/local_metaflow/: __init__.py
pkg_src/retrain_pipelines/inspectors/: __init__.py  hf.py  hp_cv_inspector.py  utils.py  wandb.py
pkg_src/retrain_pipelines/model/: __init__.py  hf_utils.py
pkg_src/retrain_pipelines/model/mf_lightgbm_regress_mlserver/: Dockerfile.mlserver  __init__.py  dask_cleanup.py  dask_trainer.py  mlserver_lightgbm_reg_handler.py  model-settings.json  preprocessing.py  settings.json
pkg_src/retrain_pipelines/model/mf_lightgbm_regress_mlserver/mlserver/: __init__.py  model_info.py  models.py  server.py
pkg_src/retrain_pipelines/model/mf_lightgbm_regress_mlserver/mlserver/endpoint_test/: __init__.py  endpoint_test.py
pkg_src/retrain_pipelines/model/mf_lightgbm_regress_tempo/: __init__.py  dask_trainer.py  preprocessing.py
pkg_src/retrain_pipelines/model/mf_tabnet_classif_torchserve/: Dockerfile.torchserve  preprocessing.py  torchserve_tabnet_handler.py  trainer_utils.py
pkg_src/retrain_pipelines/model/mf_tabnet_classif_torchserve/endpoint_test/: __init__.py  endpoint_test.py
pkg_src/retrain_pipelines/model/mf_tabnet_classif_torchserve/torchserve/: __init__.py  model_info.py  models.py  server.py
pkg_src/retrain_pipelines/model/mf_tabnet_classif_torchserve/torchserve/endpoint_test/: endpoint_test.py
pkg_src/retrain_pipelines/model/mf_unsloth_func_call_litserve/: Dockerfile.litserve  Dockerfile.litserve_template  eval.py  litserve_server.py  trainer.py
pkg_src/retrain_pipelines/model/mf_unsloth_func_call_litserve/litserve/: .dockerignore  __init__.py  litserve-serverconfig_template.yaml  litserve_datamodel.py  litserve_server.py  litserve_serverconfig.py  litserve_serverconfig_template.yaml  model_info.py
pkg_src/retrain_pipelines/pipeline_card/: __init__.py
pkg_src/retrain_pipelines/pipeline_card/helpers/: __init__.py  helpers.py  legacy.py  parallel_coord_plot.py
pkg_src/retrain_pipelines/pipeline_card/mf_lightgbm_regress_mlserver/: __init__.py  pipeline_card.py  template.html
pkg_src/retrain_pipelines/pipeline_card/mf_lightgbm_regress_tempo/: __init__.py  pipeline_card.py  template.html
pkg_src/retrain_pipelines/pipeline_card/mf_tabnet_classif_torchserve/: masks_plotting.py  pipeline_card.py  template.html
pkg_src/retrain_pipelines/pipeline_card/mf_unsloth_func_call_litserve/: dataset_readme.py  dataset_readme_template.md  model_readme.py  model_readme_template.md  pipeline_card.py  template.html
pkg_src/retrain_pipelines/utils/: __init__.py  cli_wave.py  hf_utils.py  pytest_utils.py  rich_logging.py  rich_wave.py  utils.py  wsl_utils.py
pkg_src/retrain_pipelines/utils/docker/: __init__.py  docker.py
retrain_pipelines/: __version__.py  local_launcher.py  local_launcher.sh
retrain_pipelines/dataset/: dataset.py
retrain_pipelines/pipeline_card/: __init__.py
retrain_pipelines/utils/: __init__.py  utils.py
sample_pipelines/: .env  .env_example  README.md
sample_pipelines/LightGBM_hp_cv_WandB/: LightGBMwandb.ipynb  requirements.txt  retraining_pipeline.py
sample_pipelines/TabNet_hp_cv_WandB/: TabNetWandb.ipynb  requirements.txt  retraining_pipeline.py
tests/: test_mf_huggingface.py  test_mf_tabular.py
(+109 files in other folders)
