
[build-system]
requires = ["wheel", "setuptools>=60", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retrain-pipelines"
authors = [
    {name = "Aurelien-Morgan"}
]
maintainers = [
    {name = "Aurelien-Morgan"}
]
description = "retrain-pipelines lowers the barrier to entry for the creation and management of professional machine learning retraining pipelines."
readme = { file = "README.md", content-type = "text/markdown" }
license = {text = "Apache License 2.0"}
requires-python = ">=3.10"
keywords = [
    "machine-learning",
    "ml-pipelines",
    "retrain-pipelines",
    "model-retraining",
    "automl",
    "mlops",
    "model-versioning",
    "model-blessing",
    "inference-pipeline",
    "docker-deployment",
    "data-preprocessing",
    "hyperparameter-tuning",
    "model-performance",
    "pipeline-documentation",
    "eda",
    "exploratory-data-analysis",
    "continuous-integration",
    "continuous-deployment",
    "ci-cd",
    "model-monitoring",
    "pipeline-customization",
    "pipeline-templates",
    "open-source"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities"
]
dependencies = [
    "ipykernel>=6.20",
    "pandas>=2",
    "pydantic>=2",
    "matplotlib>=3.4",
    "metaflow>=2.9",
    "wandb>=0.21.1",
    "plotly>=4",
    "jinja2>=3",
    "scikit-learn>=1",
    "numpy>=1.17.3,<2",
    "pillow>=10.4.0",
    "regex>=2022.10.31",
    "rich>=14.0.0",
    "SQLAlchemy>=2.0.41",
    "alembic>=1.16.2",
    "cloudpickle>=3.0.0",
    "aiosqlite>=0.21.0",
    "grpcio>=1.67.1",
    "grpcio-health-checking>=1.67.1"
]
dynamic = ["version"]

[project.optional-dependencies]
local = [
    "uvicorn>=0.34.0",
    "wsproto>=1.3.2",
    "python-fasthtml>=0.12.21",
    "tzlocal>=5.3.1",
    "pyngrok>=7.5.1"
]
dev = [
    "sqlite-web",
    "pytest>=8.3.3",
    "pytest-env>=1.1.5",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.12",
    "mypy>=2.0.0",
    "pre-commit>=4.6.0"
]

[tool.setuptools_scm]
root = ".."
version_scheme = "only-version"
local_scheme = "no-local-version"
version_file = "retrain_pipelines/__version__.py"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"retrain_pipelines" = ["*launcher.sh"]
"retrain_pipelines.dag_engine.web_console.static" = ["*.*"]
"retrain_pipelines.dag_engine.web_console.utils.execution" = ["svg_template.html"]
"retrain_pipelines.dag_engine.db.alembic" = ["script.py.mako"]
"retrain_pipelines.dag_engine.db.grpc" = ["README.txt", "*.proto"]
"retrain_pipelines.model" = ["**/Dockerfile.*", "**/.dockerignore", "**/*template.*"]
"retrain_pipelines.pipeline_card" = ["**/*template.*"]

[tool.setuptools.exclude-package-data]
"*" = ["MANIFEST.in"]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --disable-warnings -q --cov=pkg_src --cov-report=term-missing"  # --cov-fail-under=80"
testpaths = ["tests/unit"]

[tool.ruff]
preview = true
src = ["pkg_src"]
target-version = "py310"
show-fixes = true
line-length = 100
exclude = [
    "*.ipynb",
    "**/*.ipynb",
    "pkg_src/retrain_pipelines/dag_engine/db/alembic/versions/",
    "pkg_src/retrain_pipelines/dag_engine/db/grpc/task_trace_pb2_grpc.py",
    "pkg_src/retrain_pipelines/dag_engine/db/grpc/task_trace_pb2.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "D"]
extend-select = [
    "D417",   # Param in signature missing from docstring
    "DOC102", # Documented param not in signature - REQUIRES PREVIEW FLAG
    "D414",   # Section has no content
    "D406",   # Section name missing trailing newline
    "D407",   # Missing dashed underline after section header
    "D408",   # Underline not on line immediately after section name
    "D409",   # Underline length doesn't match section name
    "D410",   # Missing blank line after section
    "D411",   # Missing blank line before section
]
ignore = [
    "B019",  # Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function"
    "D104",  # Missing docstring in public package
    "D105",  # Missing docstring in magic method"
    "D106",  # Missing docstring in public nested class
    "E701",  # Multiple statements on one line (colon)
    "E702",  # Multiple statements on one line (semicolon)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = ["pkg_src", "pkg_src/.mypy_stubs"]

[tool.coverage.run]
source = ["pkg_src/retrain_pipelines/dag_engine"]
omit = [
  "pkg_src/retrain_pipelines/dag_engine/db/alembic/versions/*",
  "pkg_src/retrain_pipelines/dag_engine/db/grpc/*_pb2.py",
  "pkg_src/retrain_pipelines/dag_engine/db/grpc/*_pb2_grpc.py",
]

[tool.coverage.report]
omit = [
  "pkg_src/retrain_pipelines/dag_engine/db/alembic/versions/*",
  "pkg_src/retrain_pipelines/dag_engine/db/grpc/*_pb2.py",
  "pkg_src/retrain_pipelines/dag_engine/db/grpc/*_pb2_grpc.py",
]

# alias / entrypoint for CLI utility
[project.scripts]
retrain_pipelines_legacy = "retrain_pipelines.legacy_launcher:cli_utility"
retrain_pipelines = "retrain_pipelines.launcher:cli_utility"
webconsole_start = "retrain_pipelines.dag_engine.web_console.main:webconsole_start"
webconsole_shutdown = "retrain_pipelines.dag_engine.web_console.main:webconsole_shutdown_cli"

[project.urls]
"Repository" = "https://github.com/aurelienmorgan/retrain-pipelines"
"PyPI" = "https://pypi.org/project/retrain-pipelines/"
"Hugging Face" = "https://huggingface.co/retrain-pipelines"
"Gleevy Labs" = "https://gleevy-labs.ai"

